--- a/src/components/Pages/Home.module.css
+++ b/src/components/Pages/Home.module.css
@@ -1,34 +1,26 @@
-/* .header {
-  max-width: 60rem;
-  margin: auto;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-} */
-
-.list {
-  background: #d0c3c3;
-   
-     
-  width: 600px;
-  margin-top:125px;
-  margin-left :500px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: vertical;
-          flex-direction: column;
-  border-radius: 20px;
-  box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+/* Home.module.css */
+.header {
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
-.list a {
+nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+nav li {
+  margin-right: 20px;
+}
+
+nav a {
   text-decoration: none;
-  color: var(--color-primary-400);
+  color: #000;
+  font-weight: bold;
+  transition: color 0.3s;
 }
 
-.list a:hover,
-.list a.active {
-  color: var(--color-primary-800);
-  text-decoration: underline;
+nav a.active {
+  color: #007bff;
 }
