--- a/src/components/Pages/Registration.module.css
+++ b/src/components/Pages/Registration.module.css
@@ -1,109 +1,53 @@
-/* body{
-    background: lightgreen;
-    font-family: 'Rubik', sans-serif;
-  
-  } */
-  .studentRegister h1 {
-    padding: 35px 35px 0 35px;
-    font-weight: 300;
-  }
-  .inputField{
-    padding: 20px;
-    border-radius: 10px;
-  }
-  .label{
-align-content: center;
+/* Registration.module.css */
+.studentRegister {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  }
-   .loginForm .content {
-    padding: 35px;
-    text-align: center;
-  } 
-  /* form {
-    display: inline-block;
-    background: #ded8d8;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 2rem;
-    margin: 2rem 0 1rem 0
-  } */
-  .studentRegister {
-    background: #6a7980;
-   border-radius: 10px;
-    
-    width: 500px;
-    margin-top:125px;
-    margin-left :500px;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    border-radius: 20px;
-    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.3);
-  }
-  .studentRegister .inputField {
-      padding: 12px 5px;
-    }
-    .studentRegister .inputField .input {
-      font-size: 16px;
-      display: block;
-      font-family: 'Rubik', sans-serif;
-      width: 100%;
-      padding: 10px 1px;
-      border: 0;
-      border-bottom: 1px solid #747474;
-      outline: none;
-      -webkit-transition: all .2s;
-      transition: all .2s;
-    }
-    .studentRegister .inputField .input::-webkit-input-placeholder {
-      text-transform: uppercase;
-    } 
-     .studentRegister.inputField .input::-moz-placeholder {
-      text-transform: uppercase;
-    }
-     .studentRegister.inputField .input:-ms-input-placeholder {
-      text-transform: uppercase;
-    } 
-     .studentRegister.inputField .input::-ms-input-placeholder {
-      text-transform: uppercase;
-    } 
-     .studentRegister.inputField .input::placeholder {
-      text-transform: uppercase;
-    } 
-    .studentRegister.inputField .input:focus {
-      border-color: #222;
-    }
-    .studentRegister .action {
-        margin-top: 5%;
-        margin-left: 40%;
-        margin-bottom: 10%;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-                flex-direction: row;
-      }
-      .studentRegister .action .button {
-       
-        width: 100%;
-        border: none;
-        padding: 18px;
-        font-family: 'Rubik', sans-serif;
-        cursor: pointer;
-        text-transform: uppercase;
-        background: #286FB4;
-        color:#fff;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        letter-spacing: 0.2px;
-        outline: 0;
-        -webkit-transition: all .3s;
-        transition: all .3s;
-      }
-      .studentRegister.action .button:hover {
-        background: #B0DDE4;
-      }
+.content {
+  width: 300px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-radius: 8px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.inputField {
+  margin-bottom: 10px;
+}
+
+.label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.action {
+  text-align: center;
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
