--- a/src/components/Pages/Registration.module.css
+++ b/src/components/Pages/Registration.module.css
@@ -1,4 +1,3 @@
-/* Registration.module.css */
 .studentRegister {
   display: flex;
   justify-content: center;
@@ -9,11 +8,12 @@
 .content {
   width: 300px;
   padding: 20px;
-  background-color: #f2f2f2;
-  border-radius: 8px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
 }
 
-h1 {
+.title {
+  font-size: 24px;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -23,31 +23,34 @@ h1 {
 }
 
 .label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
+  font-size: 16px;
 }
 
 .input {
   width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 .action {
+  margin-top: 20px;
   text-align: center;
 }
 
 .button {
-  padding: 10px 20px;
-  background-color: #007bff;
+  padding: 8px 16px;
+  background-color: #4caf50;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 3px;
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
+}
+
+.button:active {
+  background-color: #3e8941;
 }
