--- a/src/components/Data/Students/studentProfile.module.css
+++ b/src/components/Data/Students/studentProfile.module.css
@@ -1,33 +1,54 @@
 /* studentProfile.module.css */
+.body {
+  background: linear-gradient(to right, #7ee8fa, #eec0c6);
+}
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    margin: 0 auto;
-  }
-  
-  .label {
-    margin-bottom: 5px;
-  }
-  
-  .input {
-    margin-bottom: 10px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .button {
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 300px;
+  margin: 0 auto;
+  padding-top: 35px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.logo {
+  font-size: 26px;
+  padding-bottom: 20px;
+}
+
+.label {
+  margin-bottom: 5px;
+}
+.label:hover {
+  transform: scale(1.05);
+  /* box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06); */
+}
+
+.input {
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+}
+.input:hover {
+  transform: scale(1.05);
+}
+
+.button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 12px;
+  width: 75%;
+}
+.button:hover {
+  transform: scale(1.05);
+}
